redesignedoj/files_usersubmissions/4/submission.txt
2_WEIRDALGORITHM_code.cpp: In function ‘int main()’:
2_WEIRDALGORITHM_code.cpp:5:11: error: expected ‘;’ before ‘}’ token
    5 |   return 0
      |           ^
      |           ;
    6 | }
      | ~          
